# discord-jukebox

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  jukebox.py  pyproject.toml  start.sh
.github/workflows/: create-release.yml  docker-publish.yml
