[project]
name = "jukebox"
version = "0.1.0"
description = "A Discord bot for playing audio"
authors = [
    {name = "4piu",email = "16668056+4piu@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # TODO: switch to 2.6 when released: https://github.com/Rapptz/discord.py/issues/10207
    "discord.py[voice] @git+https://github.com/rapptz/discord.py",
    "yt-dlp>=2025.7.21",
    "python-dotenv>=1.1.1",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
