[project]
name = "jukebox"
version = "0.1.0"
description = "A Discord bot for playing audio"
authors = [
    {name = "4piu",email = "16668056+4piu@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "discord-py[voice] (>=2.6.4,<3.0.0)",
    "yt-dlp (>=2025.12.8)",
    "python-dotenv (>=1.2.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
