[project]
name = "jukebox"
version = "0.1.0"
description = "A Discord bot for playing audio"
authors = [
    {name = "4piu",email = "16668056+4piu@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "discord-py[voice]>=2.7.1",
    "python-dotenv>=1.2.2",
    "yt-dlp>=2026.7.4",
]

[tool.uv]
package = false
